# hugate

./: .gitignore  README.md
proxy/: .gitignore  auth.go  go.mod  go.sum  main.go  proxier.go  proxy_test.go  utils.go
proxy/abi/: erc1155.go  erc721.go
proxy/cluster-client/: client.go  client_test.go
proxy/db/: graph.go  graph_test.go  server.go
proxy/restful/: handler.go  service.go
proxy/snapshot/: agent.go  agent_test.go
proxy/test/: proxy_test.go
proxy/tracer/: emitter_test.go  service.go  topic.go
restful/: .gitignore  Cargo.toml  diesel.toml
restful/migrations/2022-09-06-090032_users/: up.sql
restful/migrations/2022-09-06-093052_users_add_updatetime/: up.sql
restful/src/: db.rs  handler.rs  jwt.rs  main.rs  model.rs  models.rs  schema.rs
restful/src/db/: tests.rs
restful/src/handler/: comments.rs  follow.rs  medal.rs  metadata.rs  thoughts.rs  user.rs
restful/src/jwt/: tests.rs
restful/src/models/: comments.rs  likes.rs  pagination.rs  pass.rs  thoughts.rs  users.rs
smart-contracts/: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json  posts.go
smart-contracts/.openzeppelin/: unknown-31337.json
smart-contracts/contracts/: CoreFactory.sol  Cuckoo.sol  ERC20Tmpl.sol  NFTTree.sol  Posts.sol  Profile.sol  TestNft.sol  Thoughts.sol
smart-contracts/contracts/lib/: DataTypes.sol
smart-contracts/contracts/test/: TestNft.sol  (+1 more)
smart-contracts/scripts/: checker.js  deploy.js  deploy_cukcoo.js  deploy_thoughts.js  post.js  update_cuckoo.js  update_thought.js
smart-contracts/test/: cuckoo.js  factory.js
(+15 files in other folders)
