[package]
name = "hug_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket_codegen = "0.4.11"
diesel = { version = "1.4.8", features = ["postgres","chrono","r2d2"] }
dotenv = "0.9.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive ="0.1.7"
jsonwebtoken = "8"
rand = "0.8.5"
web3 = "0.18.0"
hex = "0.4.3"
chrono = "0.4.22"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]